mimos/clip-mint/clip/clip-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    servis: clipapp
  name: 1-clipapp
  namespace: clip-mint
spec:
  replicas: 1
  selector:
    matchLabels:
      servis: clipapp
  template:
    metadata:
      labels:
        servis: clipapp
    spec:
      containers:
      - env:
        - name: MICLIP_DB_IP
          value: clipdb.clip-mint.svc.cluster.local
        - name: MICLIP_APP_IP
          value: miclipapp
        image: mifrepo.mimos.my:443/mi-clip_mi-int/miclip.app:latest
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 80
          protocol: TCP
      imagePullSecrets:
      - name: mifrepo
      restartPolicy: Always
