mimos/clip-mint/clip/clip-db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    servis: clipdatabase
  name: clipdb
  namespace: clip-mint
spec:
  replicas: 1
  selector:
    matchLabels:
      servis: clipdatabase
  template:
    metadata:
      labels:
        servis: clipdatabase
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: password
        image: mifrepo.mimos.my:443/mi-clip_mi-int/miclip.db:latest
        imagePullPolicy: Always
        name: db
        ports:
        - containerPort: 3306
          protocol: TCP
      imagePullSecrets:
      - name: mifrepo
      restartPolicy: Always
