mimos/clip-mint/clip/clip-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clipapp
  namespace: clip-mint
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    servis: clipapp
